fixed small bugs, fixed bugs with chart height on smaller screens

--- a/src/app/modules/core/components/chart/chart.component.css
+++ b/src/app/modules/core/components/chart/chart.component.css
@@ -3,6 +3,7 @@
   display: flex;
   gap: 1rem;
   flex-direction: column;
+  height: auto !important;
 }
 
 @media screen and (min-width: 768px) {
